# techlahoma-private

./: .env  .gitignore  MANIFEST.in  README.md  accountinfo  app.py  constituent  deployment_instructions.md  local_test.py  modularity.txt  old-app.py  points_dict_example  pyproject.toml  test_webapp.py  www_checklahoma_org_wsgi.py
app/: __init__.py  config.py  neoncrm.py  secretkey.py  timezones.py  views.py
app/static/: account_details.css  base.css  landing.css  neon_redirect.css
app/templates/: account_details.html  base.html  check_in.html  contact_form.html  dashboard.html  error.html  form_2.html  landing.html  landing_2.html  linkedin.html  neon_redirect.html  neon_redirect_2.html
example_data/: points_dict_example
old/: app.py  old-error-handling-chunk.py  requirements.txt
src/techlahoma_checkin/app/: __init__.py  views.py
src/techlahoma_checkin/app/static/: account_details.css
src/techlahoma_checkin/app/templates/: account_details.html  base.html  form.html
src/techlahoma_checkin/dev/: auto_config.py  blank_.env  test.py
src/techlahoma_checkin/webapp/: __init__.py  views.py
src/techlahoma_checkin/webapp/static/: form.css
static/: landing.css  neon_redirect.css
templates/: check_in.html  error.html  form.html  landing.html  linkedin.html  logout.html  main.html  neon_redirect.html
unrelated/: geoffs-meetup-scraper.html
