[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "techlahoma_checkin"
version = "0.0.1"
authors = [ 
    {name = "Jonathan Boller", email = "jonathan.boller@yahoo.co.uk"},
]
dependencies = [
    "Flask", "Flask-Session", "redislite", "Werkzeug", "requests", "python-dotenv"
]

[project.scripts]
auto_config = "techlahoma_checkin:dev:auto_config"
test = "techlahoma_checkin:dev:test"

[tool.setuptools]
include-package-data = true